[package]
name = "sinqtt"
version = "0.1.0"
edition = "2024"
description = "MQTT to InfluxDB bridge for IoT applications"
license = "MIT"
authors = ["HARDWARIO a.s. <ask@hardwario.com>"]

[features]
default = []
tls = ["rustls", "rustls-pemfile"]

[dependencies]
# Required per SPEC
rumqttc = "0.25"
jsonpath-rust = "1.0"

# TLS (optional)
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.0", optional = true }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }

# Expression
evalexpr = "13.1"

# Cron
cron = "0.15"
chrono = "0.4"

# Compression
flate2 = "1.0"

# Utils
base64 = "0.22"
hex = "0.4"
regex = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-Time Optimization
codegen-units = 1   # Better optimization (slower compile)
panic = "abort"     # Smaller binary, no unwinding
strip = true        # Strip symbols
